--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                             </div>
                         </div>
                         <!-- ////////// Goal statistique -->
-                        <!-- <div id="goalStatistique" class="grid grid-cols-2 gap-4 hidden">
+                        <div id="goalStatistique" class="grid grid-cols-2 gap-4 hidden">
 
                             <div>
                                 <label for="diving" class="block text-sm font-medium text-gray-700">diving</label>
@@ -313,7 +313,7 @@
                                     class="w-full mt-1 p-2 border rounded-lg shadow-sm focus:ring-blue-500 focus:border-blue-500">
                                 <span id="errorPositioning" class="hidden">errorPositioning</span>
                             </div>
-                        </div> -->
+                        </div>
 
                         <button type="button" id="addbtn"
                             class="w-full bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-400">
